--- a/client/index.html
+++ b/client/index.html
@@ -17,6 +17,7 @@
     />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-site-verification" content="ABC123XYZ" />
     <title>BookMyShow</title>
   </head>
   <body>
